Fixed checkbox vertical alignment in document selector list

--- a/k2e/bootplate/source/scss/App.scss
+++ b/k2e/bootplate/source/scss/App.scss
@@ -69,6 +69,10 @@ $assetPath: "../../assets";
 	line-height: (32px - 1px); // vertically aligned text
 }
 
+.k2e-document-selector-item .onyx-checkbox {
+    vertical-align: baseline;
+}
+
 /***********************************************************************************************/
 /* Document Display */
 
